Fix navigation menu on IE (#1481)
* nav elements were collapsing into each other
* scrollbar was overlaping with the toolbar

Re #1447

Tested on other browsers. All ok there.

--- a/src/app/frontend/chrome/chrome.scss
+++ b/src/app/frontend/chrome/chrome.scss
@@ -63,6 +63,9 @@ body,
 .kd-app-entire-content {
   background-color: $body;
   max-height: 100%;
+  // Move entire app content below toolbar to avoid elements overlap with
+  // shadow (there was propblem with it on IE).
+  z-index: 0;
 }
 
 .kd-app-content {
